--- a/src/app/platos/platos.page.html
+++ b/src/app/platos/platos.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Oh Mama! Oh my Food!
+      Platos
     </ion-title>
     <ion-buttons slot="end">
       <ion-button *ngIf="!isUserAuthenticated()" [routerLink]="['/login']">
@@ -24,11 +24,9 @@
       <ion-grid>
         <ion-row >
           <ion-col size="6" *ngFor="let platos of platos_rest; let idx = index">
-            <ion-card [routerLink]="['/plato-ind', platos.IdPlatos]">
-              <span  *ngFor="let img of img_platos_rest;">
-                {{platos.IdCaMeCa}}
-                {{img[0]}}
-                <span *ngIf="platos.IdCaMeCa == img[0]">
+            <ion-card [routerLink]="['/plato-ind', platos.IdPlatos, platos.IdRes]">
+              <span  *ngFor="let img of img_platos_rest; let idx2 = index">
+                <span *ngIf="platos.IdPlatos == img[0]">
                   <span *ngIf="img[1] != 0">
                     <img src="http://localhost/getfile/{{platos.IdRes}}/platos/{{img[0]}}/{{img[1]}}" />
                   </span>
