--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,15 +24,18 @@
 </ion-header>
 
 <ion-content fullscreen  scroll-y="true">
+  
   <ion-slides>
     <ion-slide style="background-image: url('https://th.bing.com/th/id/R.240b34132457a814ef3047bbd0ae002b?rik=meVYgZ98d4EnUQ&pid=ImgRaw&r=0&sres=1&sresct=1')">
       <div class="slide" >
-        <h2 style="color: white">aaaaaaaaaaaaaaaaa</h2>
+        <h2 style="color: white">      Oh Mama! Oh my Food!        </h2>
         <p style="color: white">
-         asdasssssssssssssssssssss
+          La solución definitiva a la gestión y comunicación interna de restaurantes.
         </p>
+        <p style="color: white; background-color: #00000085" class="bot">Desliza y accede a la lista de restaurantes &nbsp; <ion-icon name="return-down-forward-outline"></ion-icon></p>
       </div>
-    </ion-slide>
+     
+  </ion-slide>
 
     <ion-slide>
       <ion-grid>
