--- a/src/app/pedido/pedido.page.html
+++ b/src/app/pedido/pedido.page.html
@@ -18,12 +18,30 @@
 </ion-header>
 
 <ion-content>
-  <ion-row >
-    <ion-col size="6" *ngFor="let plat of platosPed; let idx = index" >
-      <p class="ion-text-center">{{plat.plato}}</p>
-    </ion-col>
-    <ion-button md="env" ios="env" (click)="enviarPedido()"></ion-button>
-  </ion-row>
+
+  <!-- <ion-row > -->
+    <span *ngIf="platosPed != null">
+      <ion-fab vertical="bottom" horizontal="start" slot="fixed">
+        <ion-button md="env" ios="env" (click)="enviarPedido()">Finalizar pedido</ion-button>
+      </ion-fab>
+      <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-button md="env" ios="env" >Cancelar pedido</ion-button>
+      </ion-fab>
+      <span *ngFor="let plat of platosPed; let idx = index" >
+        <ion-card *ngIf="plat != null">
+          <p class="ion-text-center">Nombre plato: {{plat.plato}}</p>
+          <p class="ion-text-center">Cantidad: {{plat.cantidad}}</p>
+          <p class="ion-text-center">precio:{{plat.precio}}</p>
+        </ion-card>
+      </span>
+    </span>
+    <span class="ion-text-center " *ngIf="platosPed == null">
+        <p class="ion-padding" >Su carrito está vacío</p>
+    </span>
+    
+
+  
+  <!-- </ion-row> -->
   
 </ion-content>
 <style>
