--- a/src/app/listarest/listarest.page.html
+++ b/src/app/listarest/listarest.page.html
@@ -53,7 +53,7 @@
                 <ion-icon name="star" color="primary"></ion-icon><ion-icon name="star" color="primary"></ion-icon>
               </span>
               <span class="ion-float-right" *ngIf="rest.Valoracion == 1" >
-                <<ion-icon name="star" color="primary"></ion-icon>
+                <ion-icon name="star" color="primary"></ion-icon>
               </span>
               <ion-card-subtitle>{{rest.Nombre}}</ion-card-subtitle><br>
               <ion-button [routerLink]="['/ficha/', rest.IdRes]" class="ion-float-right"  size="small">Ver Más</ion-button>
