--- a/src/app/pedidorapido/pedidorapido.page.html
+++ b/src/app/pedidorapido/pedidorapido.page.html
@@ -1,34 +1,53 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Pedido Rapido</ion-title>
+    <ion-buttons slot="start"> <!-- *ngIf="isUserAuthenticated()" --> 
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+    </ion-title>
+    <ion-buttons slot="end">
+      <ion-button *ngIf="!isUserAuthenticated()" [routerLink]="['/login']">
+        <ion-icon name="log-in-outline"></ion-icon>
+      </ion-button>
+      <ion-button *ngIf="isUserAuthenticated()" (click)="logout()">
+        <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col>
+      <ion-col class="ion-text-center">
         <img src="/assets/qr.png" style="width: 50%; background-color: #727272;" class="mx-auto">
-        <br>
+        <br><br>
         <ion-button (click)="startScanner()">SCANEAR</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-item>
-          <ion-label position="floating" class="letra_chica">CODIGO RESTAURANTE</ion-label>
-          <input class="w3-input w3-border" [(ngModel)]="idRes" type="number">
-        </ion-item>
-        <ion-item>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating" class="letra_chica">CODIGO RESTAURANTE</ion-label>
+            <ion-input [(ngModel)]="idRes" type="number"></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-item >
           <ion-label position="floating" class="letra_chica">CODIGO Mesa</ion-label>
-          <input class="w3-input w3-border" [(ngModel)]="codMesa" type="text">
-        </ion-item>
-        <button (click)="pedirMesa()" class="w3-button w3-light-green">Pedir Mesa</button>
+          <ion-input [(ngModel)]="codMesa" type="text"></ion-input>
+        </ion-item><br>
+        <span class="centrado">
+          <ion-button class="ion-align-self-center" (click)="pedirMesa()">Pedir Mesa</ion-button>
+        </span>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col>
-          <ion-button  [routerLink]="['/listarest']">TODOS LOS RESTAURANTES</ion-button>
+      <ion-col class="ion-text-center">
+        <span class="ion-text-center">
+          ¿No conoces el código? <br>
+          <a class="mx-auto" [routerLink]="['/listarest']">Todos los restaurantes</a>
+        </span>
       </ion-col>
     </ion-row>
   </ion-grid>
