--- a/src/app/ficha/ficha.page.html
+++ b/src/app/ficha/ficha.page.html
@@ -67,13 +67,13 @@
     </ion-grid>
   </div>
 
-
-  <!-- <div class="map-container">
+<!-- 
+  <div class="map-container">
     <div class="map-frame">
       <div id="map"></div>
     </div>
   </div>   -->
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2982.4306191764335!2d0.6586870153937409!3d41.62482267924314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a6e0dc00000001%3A0xd463b4293e20b6f5!2sITV%20Lleida%20Applus!5e0!3m2!1ses!2ses!4v1652977230171!5m2!1ses!2ses" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20069.41156957926!2d0.604677334272351!3d41.61353981020916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5290b249aa6e386e!2sPunto%20Estrella%20Dalmau!5e0!3m2!1ses!2ses!4v1655167837686!5m2!1ses!2ses" width="100%" height="400" style="border:0;"allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </ion-content>
 
